Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/warnings/MaxDiagsRecompile.all.out
MaxDiagsRecompile.java:9:3: compiler.err.cant.resolve.location: kindname.class, NoSuchSymbol1, , , (compiler.misc.location: kindname.class, MaxDiagsRecompile, null)
MaxDiagsRecompile.java:10:3: compiler.err.cant.resolve.location: kindname.class, NoSuchSymbol2, , , (compiler.misc.location: kindname.class, MaxDiagsRecompile, null)
MaxDiagsRecompile.java:11:3: compiler.err.cant.resolve.location: kindname.class, NoSuchSymbol3, , , (compiler.misc.location: kindname.class, MaxDiagsRecompile, null)
MaxDiagsRecompile.java:12:3: compiler.err.cant.resolve.location: kindname.class, NoSuchSymbol4, , , (compiler.misc.location: kindname.class, MaxDiagsRecompile, null)
4 errors